[package]
name = "bevy-rend3"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_ecs = "0.6.0"
bevy_app = "0.6.0"
bevy_winit = "0.6.0"
bevy_window = "0.6.0"
bevy_utils = "0.6.0"
bevy_math = "0.6.0"
bevy_transform = "0.6.0"

wgpu = "0.12.0"
rend3 = "0.3.0"
gltf = "0.16.0"
pollster = "0.2.5"
rend3-gltf = "0.3.0"
rend3-routine = "0.3.0"

[dev-dependencies]
image = "0.24.0"
bevy_log = "0.6.0"
bevy_core = "0.6.0"
bevy_input = "0.6.0"
bevy_diagnostic = "0.6.0"
bevy_winit = { version = "0.6.0", features = ["x11"] }